# rowbot_vision

./: CMakeLists.txt  HSV sliders.py  README.md  knn.py  linear.py  objectifier_2.py  objectifier_3.py  package.xml  setup.py  triangleCrucifixCircleIdentifer.py
Kenneth/: vidContour.py
images/: ._vtest2 (2).avi
launch/: bagtest.launch  bagtestCamdar.launch  bagtestLidar.launch  camtest.launch  clarity.sh  filetest.launch  imExtract.launch  simtest.launch  vision.launch
misc/: ranger.py
msg/: Object.msg  ObjectArray.msg  misc.readme
nodes/: camIO.py  camIn.py  opencv_subscriber.py  rosIO.py  rviz_publisher.py  shape_test.py  vision_processor.py
object_classification/: ColourExtractor.cpp  Object.cpp  ShapeDetector.cpp  ShapeDetector.hpp  buoy_detection.cpp  enums.h  input.hpp  run.sh  threshold_matrix.xml
scripts/: ClassifyServer.py  HSV sliders.py  ImageServer.py  ImageServerDirect.py  TODO.txt  bagToVid.py  buoy.py  buoy_cmatch.py  cameraserver.py  clustering.py  cntdictgen.py  filters.py  frames.gv  lightPattern.py  lightbcn.py  object_server.py  object_server_helper.py  shapes.py  sim_obj_publisher.py  triangleCrucifixCircleIdentifer.py  visops.py
scripts/cntdict/: buoy.npy
scripts/liu-testopt/: buoy.py  filters.py
scripts/vision_scripts/: buoy.py  cntdictgen.py  optest.py
src/: BuoyDetector.hpp  Object.hpp  buoy_detection.cpp  buoy_detector_server.cpp  enums.h
src/images/: output
srv/: BuoyDetect.srv
versions/: ImageServer_archaic.py  buoy_featuredetect.py
versions_2/: buoy.py  buoy_uncanny_match.py  object_server.py
(+50 files in other folders)
